added jwt env variables

--- a/.env.example
+++ b/.env.example
@@ -4,12 +4,24 @@ APP_URL=
 APP_PORT=
 
 # Database
-DATABASE_TYPE=
-DATABASE_HOST=
-DATABASE_NAME=
-DATABASE_USERNAME=
+DATABASE_TYPE=postgres
+DATABASE_HOST=localhost
+DATABASE_NAME=store-db
+DATABASE_USERNAME=admin
 DATABASE_PASSWORD=
-DATABASE_PORT=
+DATABASE_PORT=5432
+
+#JWT
+JWT_ALGORITHM=HS256
+JWT_SECRET=jwt_secret_code
+JWT_ISSUER=example
+JWT_AUDIENCE=example
+JWT_SUBJECT=example
+# Value in seconds
+JWT_EXPIRY=87600
+
+API_THROTTLE_TTL=60
+API_THROTTLE_LIMIT=120
 
 # Swagger
 SWAGGER_DOC_URL_PATH=
