added env examples of redis and cache

--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,5 @@
 APP_NAME="User Management API"
-APP_ENV=
+APP_ENV=production
 APP_URL=
 APP_PORT=
 
@@ -10,6 +10,13 @@ DATABASE_NAME=store-db
 DATABASE_USERNAME=admin
 DATABASE_PASSWORD=
 DATABASE_PORT=5432
+
+#REDIS
+REDIS_HOST=localhost
+REDIS_PORT=6379
+
+#CACHE
+CACHE_DEFAULT_TTL=30
 
 #JWT
 JWT_ALGORITHM=HS256
@@ -24,4 +31,4 @@ API_THROTTLE_TTL=60
 API_THROTTLE_LIMIT=120
 
 # Swagger
-SWAGGER_DOC_URL_PATH=
+SWAGGER_DOC_URL_PATH=/api-docs
