--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "make:seeder": "./src/scripts/sequelize/make-seeder.script.sh"
   },
   "dependencies": {
+    "@nestjs/cache-manager": "^2.2.2",
     "@nestjs/common": "^10.3.10",
     "@nestjs/config": "^3.2.3",
     "@nestjs/core": "^10.3.10",
@@ -36,6 +37,8 @@
     "@nestjs/throttler": "^6.1.0",
     "@types/sequelize": "^4.28.20",
     "@types/validator": "^13.12.0",
+    "cache-manager": "^5.7.6",
+    "cache-manager-redis-store": "^3.0.1",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
     "dotenv": "^16.4.5",
@@ -63,6 +66,7 @@
     "@nestjs/cli": "^10.4.2",
     "@nestjs/schematics": "^10.1.3",
     "@nestjs/testing": "^10.3.10",
+    "@types/cache-manager-redis-store": "^2.0.4",
     "@types/express": "^4.17.21",
     "@types/jest": "^29.5.12",
     "@types/node": "^22.1.0",
