e2e testing and fixes

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -18,6 +18,12 @@
     "forceConsistentCasingInFileNames": true,
     "noFallthroughCasesInSwitch": true,
     "esModuleInterop": true,
-    "typeRoots": ["src/@types"]
+    "typeRoots": [
+      "src/@types",
+      "./node_modules/@types"
+    ],
+    "types": [
+      "jest",
+    ]
   }
 }
