updated .env example

--- a/.env.example
+++ b/.env.example
@@ -1,18 +1,18 @@
 APP_NAME="User Management API"
 APP_ENV=production
-APP_URL=
-APP_PORT=
+APP_URL=http://localhost
+APP_PORT=9000
 
 # Database
 DATABASE_TYPE=postgres
-DATABASE_HOST=localhost
-DATABASE_NAME=store-db
+DATABASE_HOST=user-db
+DATABASE_NAME=user-app
 DATABASE_USERNAME=admin
-DATABASE_PASSWORD=
+DATABASE_PASSWORD='U3B^2ykXk3WSt#YsdvDuM!'
 DATABASE_PORT=5432
 
 #REDIS
-REDIS_HOST=localhost
+REDIS_HOST=user-redis
 REDIS_PORT=6379
 
 #CACHE
